# outline-mcp

./: Dockerfile  README.md  main.py  outline.py  pyproject.toml  smithery.yaml  test_mcp.py
outline_mcp/: __main__.py  server.py
src/outline_mcp/: outline.py
