[project]
name = "outline-mcp"
version = "0.1.0"
description = "An MCP server for searching and retrieving documents from Outline knowledge bases. Integrates with Claude Desktop and other MCP clients to provide Outline document search capabilities with support for both interactive credentials and environment variables."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]
authors = [
    {name = "Chris Lacaille", email = "chrislacaille5@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["mcp", "claude", "outline", "knowledge-base", "search"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
outline-mcp = "outline_mcp.outline:main"

[project.urls]
"Homepage" = "https://github.com/ChrisL108/outline-mcp"
"Bug Tracker" = "https://github.com/ChrisL108/outline-mcp/issues"